--- a/app/global.css
+++ b/app/global.css
@@ -1,10 +1,160 @@
+:root{
+    --desc-course-banner-width:200px;
+    --desc-course-banner-height:300px;
+}
+
 .desc-course-banner{
-    display:inline-block;
-    width:200px;
-    height:300px;
-    margin:20px 10px;
+    display:inline-flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position:relative;
+    float:left;
+
+    width:var(--desc-course-banner-width);
+    height:var(--desc-course-banner-height);
     padding:5px;
     border-radius:5px;
-    box-shadow:2px 2px 10px 1px gray;
+    margin:20px 10px;
     overflow:hidden;
+    
+    background: linear-gradient(199deg, #7cc8f2 0%, #b9f6f0 100%);
+    box-shadow:2px 2px 10px 1px rgb(216, 216, 216);
+    
+    cursor:pointer;
+    user-select: none;
+    
+    transition:transform 0.1s;
 }
+
+.desc-course-banner::before{
+    content:'';
+
+    position:absolute;
+    z-index:-1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+
+    background-color:rgb(255, 255, 255);
+    opacity:0.3;
+
+    transform-origin: 50% 100%;
+    transform:ScaleY(0);
+
+    transition:transform 0.2s;
+}
+
+.desc-course-banner.type-basicRequired{
+    background: linear-gradient(199deg, #ffb78e 0%, #fed979 100%);
+}
+.desc-course-banner.type-basicElective{
+    background: linear-gradient(199deg, #ffc6a6 0%, #ffe7aa 100%);
+}
+
+.desc-course-banner.type-majorRequired{
+    background: linear-gradient(199deg, #51cffd 0%, #695eff 100%);
+}
+.desc-course-banner.type-majorElective{
+    background: linear-gradient(199deg, #9bcdfe 0%, rgb(235, 133, 255) 100%);
+}
+
+.desc-course-banner.type-mandatoryGeneral{
+    background: linear-gradient(199deg, #65ffa8 0%, #fffc62 100%);
+}
+.desc-course-banner[class^="type-h"]{
+    background: linear-gradient(199deg, #a2ffcb 0%, #fcfba9 100%);
+}
+
+.desc-course-banner:hover::before{
+    transform:ScaleY(1);
+}
+
+.desc-course-banner:hover{
+    transform: scale(102%);
+}
+
+.desc-course-banner-property{
+    display:block;
+    text-align:center;
+}
+
+.desc-course-banner-property-number{
+    position:absolute;
+    top:10px;
+    color:rgb(72, 71, 71);
+    font-size:1em;
+}
+.desc-course-banner-property-title{
+    color:black;
+    font-size:1.6em;
+}
+.desc-course-banner-property-section{
+    color:rgb(81, 81, 81);
+    font-size:1.3em;
+}
+.desc-course-banner-property-instructor{
+    color:rgb(79, 79, 79);
+    font-size:1em;
+}
+
+.desc-course-banner-property-type{
+    position:absolute;
+    bottom:10px;
+    font-size:0.9em;
+}
+
+.desc-course-detail{
+
+}
+
+
+.popup-root{
+    display:flex;
+    justify-content:center;
+    align-items: center;
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    z-index:1;
+}
+.popup-main{
+    width:800px;
+    height:500px;
+    z-index:1;
+    
+    border-radius:25px;
+    padding:30px;
+    box-sizing:border-box;
+
+    background-color:white;
+}
+.popup-dim{
+    position:fixed;
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+    z-index:0;
+
+    background-color:gray;
+    opacity:0.3;
+
+}
+
+
+.skeleton{
+    background:linear-gradient(90deg,#D8D8D8 30%,#EEE 50%, #D8D8D8 70%);
+    background-size:200px 200px;
+    background-position-x:-200px;
+    animation: loading 1.5s infinite;
+}
+@keyframes loading {
+    to{
+        background-position-x:200px;
+    }
+}
+
